fixed background image issue on safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,7 +111,7 @@ a.navbar-brand.pull-right:focus {
 .home {
 	height: 100vh;
     width: 100%;
-	background: url("../img/home.jpeg") no-repeat 50% 0%
+	background: url("../img/home.jpeg") no-repeat 50% 0%;
 	/* fallback for old browsers */
 	background: url("../img/home.jpeg") no-repeat 50% 0%, -webkit-linear-gradient(to left, #fff, #fff);
 	/* Chrome 10-25, Safari 5.1-6 */
@@ -121,6 +121,7 @@ a.navbar-brand.pull-right:focus {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+
 
 }
 
@@ -215,6 +216,11 @@ div.card a:hover{
 
 #id_quantity {
     width: 70px;
+}
+
+#shop-rtn-btn {
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 
@@ -353,8 +359,7 @@ button a {
         left: 0;
         top: 0;
         width: 100%;
-        height: 110%;
-        z-index: -10;
+
         background: url("../img/home.jpeg") no-repeat center center;
         -webkit-background-size: 100% 100%;
         -moz-background-size: 100% 100%;
